# rust-terrasync

./: .clog.toml  .gitignore  ACL_INTEGRATION.md  CONSUMER_FRAMEWORK.md  CONSUMER_FRAMEWORK_STATUS.md  Cargo.toml  DATABASE_SETUP.md  cargo-graph.dot  clickhouse_config.toml  rustfmt.toml  start_clickhouse.bat  start_clickhouse.sh
.github/: CONTRIBUTING.md
.github/workflows/: build.yml
app/: Cargo.toml
app/src/: lib.rs
app/src/consumer/: config.rs  console.rs  db.rs  kafka.rs  log.rs  manager.rs  mod.rs  stats.rs
app/src/scan/: filter.rs  mod.rs  scan.rs  stats.rs  test_display.rs  tests.rs
app/src/sync/: mod.rs  sync.rs
app/tests/: test_consumer.rs
cli/: Cargo.toml
cli/src/: commands.rs  lib.rs
db/: CLICKHOUSE_TABLES.md  Cargo.toml  README.md
db/src/: clickhouse.rs  config.rs  error.rs  factory.rs  lib.rs  sqlite.rs  traits.rs
db/tests/: test_clickhouse_tables.rs  test_factory_clickhouse.rs  test_sqlite_tables.rs
docker/: Dockerfile
src/: main.rs
src/resources/: default_config.toml
storage/: Cargo.toml  NFS_PATH_FORMAT.md
storage/examples/: README.md  nfs_walkdir_performance.rs
storage/src/: acl.rs  common.rs  file.rs  lib.rs  nfs.rs  s3.rs
storage/tests/: common.rs  integration_tests.rs  test_parse_nfs_path.rs  test_walkdir.rs
tests/: test_cli.rs
utils/: Cargo.toml
utils/src/: app_config.rs  error.rs  logger.rs
utils/tests/: test_config.rs
utils/tests/resources/: test_config.toml
