[package]
name = "rust-terrasync"
version = "2.0.1"
authors = ["Abid Omar <contact@omarabid.com>"]
edition = "2021"
repository = "https://github.com/Cryingmouse/rust-terrasync"
readme = "README.md"
license = "MIT"
keywords = ["cli", "starter"]
description = """
Rust Starter aims to provide high quality components to bootstrap your Rust CLI Project. It includes a battery of most used libraries; and defines a set of Rust best practices.
"""

[workspace]
members = ["utils", "cli", "app", "storage"]

[features]
nightly = ["utils/nightly"]
termlog = ["utils/termlog"]
journald = ["utils/journald"]
syslog = ["utils/syslog"]

[dependencies]
utils = { path = "utils" }
cli = { path = "cli" }
app = { path = "app" }
human-panic = "2.0.0"
better-panic = "0.3.0"
log = "0.4.27"
slog = "2.7.0"
slog-scope = "4.4.0"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.test]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
