[package]
name = "app"
version = "2.0.1"
authors = ["Abid Omar <contact@omarabid.com>"]
description = "The application core code"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
storage = { path = "../storage" }

rand = "0.9.1"
log = "0.4.27"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
walkdir = "2.4"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.10"
