[package]
name = "app"
version = "0.1.0"
authors = ["Abid Omar <contact@omarabid.com>"]
description = "The application core code"
edition = "2024"

[dependencies]
utils = { path = "../utils" }
storage = { path = "../storage" }
db = { path = "../db" }
log = "0.4.27"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1.86"
uuid = "1.18.0"

[dev-dependencies]
