[package]
name = "cli"
version = "2.0.1"
authors = ["Abid Omar <contact@omarabid.com>"]
description = "CLI interface for rust-terrasync"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
app = { path = "../app" }
log = "0.4.21"
env_logger = "0.11.5"
chrono = "0.4.38"

[dependencies.clap]
version = "4.5.37"
features = ["cargo", "derive"]

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
