[package]
name = "cli"
version = "0.1.0"
authors = ["Abid Omar <contact@omarabid.com>"]
description = "CLI interface for rust-terrasync"
edition = "2024"

[dependencies]
utils = { path = "../utils" }
app = { path = "../app" }
log = "0.4.21"
chrono = "0.4.38"

[dependencies.clap]
version = "4.5.37"
features = ["cargo", "derive"]

[dev-dependencies]
