[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clickhouse = { version = "0.12.2", features = ["uuid", "time", "test-util"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }

# For database factory registry
once_cell = "1.19"
dashmap = "5.5"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }
slog-scope = "4.4"

[dev-dependencies]
