[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
thiserror = "1.0"
walkdir = "2.4"

[dev-dependencies]
tempfile = "3.8"
