[package]
name = "storage"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
walkdir = "2.4"
nfs3_client = { version = "0.7.0", features = ["tokio"] }
async-trait = "0.1.0"
chrono = "0.4.41"

# [target.'cfg(windows)'.dependencies]
# windows = { version = "0.56", features = [
# "Win32_Foundation",
# "Win32_Security",
# "Win32_Security_Authorization",
# "Win32_Storage_FileSystem",
# "Win32_System_SystemServices"
# ] }

[dev-dependencies]
tempfile = "3.8"
futures = "0.3"
